--- a/web/instagram/src/App.css
+++ b/web/instagram/src/App.css
@@ -28,6 +28,13 @@
   color: #61dafb;
 }
 
+.twoCard{
+  display: flex;
+  flex-direction: row;
+}
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
