--- a/web/instagram/src/components/Header/Header.css
+++ b/web/instagram/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 i.Nav {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.728);
     border-bottom: 1px solid rgba(0, 0, 0, 0.495);
     position: fixed;
     width: 100%;
@@ -20,4 +20,7 @@ i.Nav {
     height: 30px;
     width: 150px;
     text-indent: -1000%
+  }
+  .Image-style{
+    border:1px solid #00000064;
   }
